config/webhook-setup/control/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webhooks
spec:
  ports:
    - name: webhooks
      port: 8082
      targetPort: webhooks
      protocol: TCP
  selector:
    control-plane: controller-manager
