config/webhook-setup/control/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-mctc
  annotations:
    mctc-component: webhook
spec:
  tls:
  - hosts:
    - webhook.172.18.0.2.nip.io
    secretName: mctc-ingress-tls
  rules:
    - host: webhook.172.18.0.2.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mctc-webhooks
                port:
                  number: 8082
